# quantum-papers-scrapers

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  papers_poster.py  pyproject.toml  scirate.py  type.py
.github/workflows/: cd.yaml
